A4 designed and dynamicdally added the details from search A:7 added sparklines and tested, A6 designed grid to fit nav and side nav

--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -5,3 +5,12 @@
   border-radius: 5px;
   height: 80%;
 }
+
+.conditionsContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weatherData {
+  display: block;
+}
