--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,19 @@
+.page {
+  height: 100vh;
+  display: grid;
+  grid-template: repeat(8, 1fr) / repeat(8, 1fr);
+}
+
 .searchContainer {
   border: 1px solid red;
+  background-color: blue;
+  grid-column: 1 / -1;
+  grid-row: 1 /3;
+}
+
+.sideNav {
+  border: 2px solid red;
+  background-color: blue;
+  grid-column: 1 / 3;
+  grid-row: 3 / -1;
 }
