--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,19 +1,38 @@
 .page {
   height: 100vh;
   display: grid;
-  grid-template: repeat(8, 1fr) / repeat(8, 1fr);
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "header header"
+    "sideNav content";
+  gap: 20px;
+  padding: 20px;
+}
+
+.searchContainer,
+.sideNav {
+  background-color: #235789;
+  border-radius: 8px;
 }
 
 .searchContainer {
-  border: 2px solid red;
-  background-color: #235789;
-  grid-column: 1 / -1;
-  grid-row: 1 /3;
+  grid-area: header;
+  color: white;
+  padding: 10px;
+  font-weight: 700;
 }
 
 .sideNav {
-  border: 2px solid red;
+  grid-area: sideNav;
   background-color: #235789;
-  grid-column: 1 / 3;
-  grid-row: 3 / -1;
+}
+
+.mainContent {
+  grid-area: content;
+  background-color: #ffffff;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
