--- a/app/components/components.module.css
+++ b/app/components/components.module.css
@@ -28,10 +28,20 @@
   font-weight: 700;
 }
 
+.forecastTitle {
+  text-align: center;
+  font-weight: 700;
+}
+
 .conditionsContainer {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+}
+
+.sparklinesContainer {
+  border: 1px solid black;
+  border-radius: 8px;
 }
 
 .weatherData {
