--- a/app/components/cityWeather/card.module.css
+++ b/app/components/cityWeather/card.module.css
@@ -1,17 +1,24 @@
 .weatherCard {
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  max-width: 700px;
 }
 
 .card {
   width: 100%;
-  padding: 20px;
-  background-color: #ffffff;
-  border: 1px solid #ccc;
+  padding: 15px;
+  border: 1px solid #ddd;
   border-radius: 8px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .cardBody {
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cardTitle {
@@ -28,13 +35,9 @@
 
 .conditionsContainer {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 10px;
-}
-
-.sparklinesContainer {
   border: 1px solid black;
-  border-radius: 8px;
+  width: 96%;
 }
 
 .weatherData {
@@ -48,9 +51,4 @@
 
 .metric {
   font-weight: 600;
-}
-
-.chart {
-  border: 2px solid red;
-  height: 40%;
 }
