--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,38 +1,30 @@
 .page {
-  height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr;
   grid-template-areas:
-    "header header"
-    "sideNav content";
-  gap: 20px;
-  padding: 20px;
-}
-
-.searchContainer,
-.sideNav {
-  background-color: #235789;
-  border-radius: 8px;
+    "nav"
+    "card1"
+    "card2"
+    "card3";
+  height: 100vh;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
 }
 
 .searchContainer {
-  grid-area: header;
+  grid-area: nav;
+  background-color: #235789;
   color: white;
   padding: 10px;
   font-weight: 700;
-}
-
-.sideNav {
-  grid-area: sideNav;
-  background-color: #235789;
+  border-radius: 0;
 }
 
 .mainContent {
-  grid-area: content;
-  background-color: #ffffff;
-  padding: 10px;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  border: 2px solid red;
 }
