--- a/app/page.module.css
+++ b/app/page.module.css
@@ -19,12 +19,22 @@
   border-radius: 0;
 }
 
+.sideNav {
+  display: none;
+  grid-area: sideNav;
+  background-color: #235789;
+  color: white;
+  padding: 10px;
+  font-weight: 700;
+}
+
 .mainContent {
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
   padding: 10px;
   width: 100%;
+  /* max-width: 1450px; */
 }
 
 @media (min-width: 768px) {
@@ -32,5 +42,26 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, 1fr);
     gap: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* Layout changes for laptop size */
+  .page {
+    grid-template-areas:
+      "nav nav"
+      "sideNav card";
+    grid-template-columns: 1fr 3fr;
+  }
+
+  .sideNav {
+    display: block;
+  }
+
+  .mainContent {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    padding: 20px;
   }
 }
