--- a/app/components/cityWeather/details.module.css
+++ b/app/components/cityWeather/details.module.css
@@ -1,9 +1,9 @@
 .sparklinesContainer {
-  border: 1px solid black;
+  background-color: whitesmoke;
   margin: 0 auto;
   border-radius: 8px;
   padding: 10px;
-  /* width: 100%; */
+
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -20,9 +20,7 @@
   justify-content: space-around;
   gap: 8px;
   margin-bottom: 10px;
-
   margin: 0 auto;
-  border: 1px solid black;
   width: 100%;
 }
 
@@ -30,13 +28,15 @@
   padding: 6px 10px;
   font-size: 0.8rem;
   border: none;
-  background-color: #dddddd;
+
   cursor: pointer;
   transition: background-color 0.3s;
+  font-weight: 600;
+  border-radius: 8px;
 }
 
 .switchContainer .activeButton {
-  background-color: #4caf50;
+  background-color: #404f5c;
   color: white;
 }
 
@@ -61,10 +61,3 @@
     height: 200px;
   }
 }
-
-/* @media (min-width: 1024px) {
-  .chart {
-    height: 250px;
-    width: 500px;
-  }
-} */
