--- a/app/page.module.css
+++ b/app/page.module.css
@@ -25,7 +25,6 @@
   background-color: #235789;
   color: white;
   padding: 10px;
-  font-weight: 700;
 }
 
 .mainContent {
@@ -34,14 +33,13 @@
   gap: 10px;
   padding: 10px;
   width: 100%;
-  /* max-width: 1450px; */
 }
 
 @media (min-width: 768px) {
   .mainContent {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2, 1fr);
-    gap: 15px;
+    gap: 10px;
   }
 }
 
@@ -52,6 +50,7 @@
       "nav nav"
       "sideNav card";
     grid-template-columns: 1fr 3fr;
+    overflow: hidden;
   }
 
   .sideNav {
@@ -61,7 +60,7 @@
   .mainContent {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 20px;
+    gap: 10px;
     padding: 20px;
   }
 }
